--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.1.0",
+    "firebase": "^10.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
